fix(header): spacing

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,9 +1,7 @@
 header {
-  position: relative;
-  left: 0;
-  top: 0;
   text-align: center;
   height: 30px;
+  margin: 20px 0;
 }
 
 header > nav > ul {
@@ -18,7 +16,7 @@ header > nav > ul > li > a {
 
 header > nav > ul > li {
   display: inline-block;
-  margin: 0 5px;
+  margin: 5px;
 }
 
 header > nav > ul > li:hover {
